tests/paczka1/fuzzy1/15280871.err
Error in line 7: A281 A281 93,4
Error in line 5: OOsVPe1 A281 47,0
Error in line 19: NiT6mqUhLt A684 99,2
Error in line 24: NiT6mqUhLt A684 906,3
Error in line 28: Yfj7R5GlOL A233 93,1
Error in line 34: OOsVPe1 A684 24,0
Error in line 38: OOsVPe1 A281 42,t
Error in line 37: WxRA8VQLSg S743 17,7
